# verifact

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md
extension/: manifest.json  options.html  options.js  popup.html  popup.js
scripts/: build_demo.py
site/: index.template.html
src/verifact/: __init__.py  cli.py  config.py  extract.py  llm.py  models.py  pipeline.py  scoring.py  social.py
src/verifact/analyzers/: __init__.py  base.py  claims.py  content_signals.py  corroboration.py  factcheck.py  media.py  source_reputation.py
src/verifact/api/: server.py
src/verifact/data/: sensational_terms.txt  source_reputation.json
tests/: test_api.py  test_claims.py  test_content_signals.py  test_scoring.py  test_social.py  test_source_reputation.py
web/: index.html
